base/oauth2-proxy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: oauth-proxy
  name: dpl
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: oauth-proxy
  template:
    metadata:
      labels:
        app.kubernetes.io/component: oauth-proxy
    spec:
      volumes:
        - name: oauth2-proxy-config
          configMap:
            name: oauth2-proxy-config
      containers:
      - name: oauth-proxy
        image: "quay.io/oauth2-proxy/oauth2-proxy:v7.8.1"
        resources:
          requests:
            cpu: 10m
            memory: 32Mi
        ports:
        - containerPort: 4180
        volumeMounts:
        - name: oauth2-proxy-config
          mountPath: /etc/oauth2-proxy.cfg
          subPath: oauth2-proxy.cfg
        args:
          - --config=/etc/oauth2-proxy.cfg
