base/oauth2-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: oauth-proxy
  name: svc
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: oauth-proxy
  ports:
    - name: http-oauthproxy
      port: 4180
