base/oauth2-proxy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: oauth2-proxy.la-suite.apps.digilab.network
      http:
        paths:
          - backend:
              service:
                name: svc
                port:
                  number: 4180
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - oauth2-proxy.la-suite.apps.digilab.network
      secretName: oauth2-tls
